Se realizo codigo